update-styles: prevent column to be nowrapped on smartphone

--- a/src/styles/bulma.scss
+++ b/src/styles/bulma.scss
@@ -4,3 +4,7 @@
 /* $title-color: #ff0000;
  */
 @import "~bulma/bulma.sass";
+
+td {
+  white-space: nowrap;
+}
